[tool.poetry]
name = "first-neurons"
version = "0.1.0"
description = ""
authors = ["ochdev <contact@och.dev>"]

[tool.poetry.dependencies]
python = "^3.8.5"
numpy = "1.18.5"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
